Change to Colombia Page And Teams Page

--- a/co.html
+++ b/co.html
@@ -5,81 +5,252 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Research</title>
     <link rel="icon" href="image/bean_icon.png" />
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/ml.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/hero.css" />
+    <link rel="stylesheet" href="css/colombia.css" />
   </head>
   <body>
     <header>
       <div class="construction-banner" id="constructionBanner">
-        This website is under construction. Some features may not work as expected. Thank you for your patience!
+        This website is under construction. Some features may not work as
+        expected. Thank you for your patience!
       </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-              <a class="navbar-brand logo" href="#">
-                  <img src="image/bean_icon.png" alt="Logo" />
-                  <span>ColCo</span>
-              </a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav ml-auto">
-                      <li class="nav-item">
-                          <a class="nav-link" href="index.html">Home</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="teams.html">Meet the Teams</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link contact-btn" href="index.html#contact">Contact Us</a>
-                      </li>
-                  </ul>
-              </div>
+        <div class="container-fluid">
+          <a class="navbar-brand logo" href="#">
+            <img src="image/bean_icon.png" alt="Logo" />
+            <span>ColCo</span>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="teams.html">Meet the Teams</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link contact-btn" href="index.html#contact"
+                  >Contact Us</a
+                >
+              </li>
+            </ul>
           </div>
-      </nav>
-  </header> 
-  <section>
-    <div class="hero">
-        <svg class="svg-lg" viewBox="0 0 1440 539" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M-1 539C-1 539 309.631 479.916 511.172 478.137C712.713 476.358 817.305 524.355 994.45 512.182C1171.59 500.01 1451 431.149 1451 431.149V0H-1V539Z" fill="#023F3A"/>
-        </svg>
-        <svg class="svg-sm" viewBox="0 0 430 160" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 160C0 160 91.9911 142.461 151.676 141.933C211.361 141.405 242.336 155.653 294.796 152.039C347.256 148.426 430 127.985 430 127.985V0H0V160Z" fill="#023F3A"/>
-        </svg>
-            
-        <div class="float-text">
-            <h1>Colombia Research Team</h1>
-            <p>Research involves meeting farmers in Colombia and collected necessary data for the project.
-            </p>
         </div>
-    </div>
-  </section>
+      </nav>
+    </header>
+    <section>
+      <div class="hero">
+        <svg
+          class="svg-lg"
+          viewBox="0 0 1440 539"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M-1 539C-1 539 309.631 479.916 511.172 478.137C712.713 476.358 817.305 524.355 994.45 512.182C1171.59 500.01 1451 431.149 1451 431.149V0H-1V539Z"
+            fill="#023F3A"
+          />
+        </svg>
+        <svg
+          class="svg-sm"
+          viewBox="0 0 430 160"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M0 160C0 160 91.9911 142.461 151.676 141.933C211.361 141.405 242.336 155.653 294.796 152.039C347.256 148.426 430 127.985 430 127.985V0H0V160Z"
+            fill="#023F3A"
+          />
+        </svg>
 
-  <section class="about mt-2 p-4">
-    <h2 class="text-center mb-4">About Us</h2>
-    <div class="row align-items-center pt-0 pl-4 pr-4">
-      <div class="mb-4">
+        <div class="float-text">
+          <h1>Colombia Research Team</h1>
+          <p>
+            Research involves meeting farmers in Colombia and collected
+            necessary data for the project.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="group_image" style="align-items: center">
+        <img src="image/Luker-group-picture.jpg" />
         <p>
-          As students on an international research trip to Colombia, our interdisciplinary fieldwork examines small-scale farming 
-          in the region, with a specific emphasis on Cacao cultivation. We will use Geographical Information Systems (GIS) to 
-          digitize and map data, creating visualizations of crop distribution and environmental patterns related to cocoa plants. By 
-          integrating field-collected data with GIS tools, our work provides valuable insights that serve as a foundational resource 
-          for decision-making. The collected data will be used by other teams working on this project to develop a deep-learning-based
-          disease detection model and conduct a thorough biological analysis offering clear insights into farmers' crops and 
-          showcasing ways to optimize their crop growth. This opportunity fosters collaboration with Colombian farmers, promoting 
-          cross-cultural exchange while advancing farming techniques, utilizing GIS, and promoting sustainability.  
+          Mariana Candamil, Kristine Morquecho, Juan Martín Betancur Uribe,
+          Rachael Gilmore, Viola Kuehl-jeberg, Denise Pacheco, Gloria Clemecia
+          Amaya, Mario Giraldo, Jhon Fredy Betancur Perez, Alex Modarresi, and
+          Yash Pansheriya
         </p>
       </div>
-    </div>
-  </section>
-    <footer class="footer2" style="color: white; text-align: center;">
+    </section>
+    <section class="about mt-2 p-4">
+      <h2 class="text-center mb-4">About Us</h2>
+      <div class="row align-items-center pt-0 pl-4 pr-4">
+        <div class="mb-4">
+          <p>
+            As students on an international research trip to Colombia, our
+            interdisciplinary fieldwork examines small-scale farming in the
+            region, with a specific emphasis on Cacao cultivation. Our work
+            includes engaging with local communities, visiting towns, and
+            conducting in-depth discussions with residents to better understand
+            their needs and aspirations. We will use Geographical Information
+            Systems (GIS) to digitize and map data, creating visualizations of
+            crop distribution and environmental patterns related to cocoa
+            plants. By integrating field-collected data with GIS tools, our work
+            provides valuable insights that serve as a foundational resource for
+            decision-making. The collected data will be used by other teams
+            working on this project to develop a deep-learning-based disease
+            detection model and conduct a thorough biological analysis offering
+            clear insights into farmers' crops and showcasing ways to optimize
+            their crop growth. This opportunity fosters collaboration with
+            Colombian farmers, promoting cross-cultural exchange while advancing
+            farming techniques, utilizing GIS, and promoting sustainability.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="Luker_section">
+      <h2>Granja Luker</h2>
+      <div class="Luker">
+        <div class="luker-column">
+          <img id="lukerImage1" src="image/Luker.jpg" alt="About Luker" />
+          <h3>About Luker</h3>
+          <p>
+            Granja Luker is a leading research center focused on enhancing 
+            cocoa productivity, minimizing crop losses, and developing 
+            innovative agricultural practices to support cocoa farmers. 
+            For over 60 years, it has utilized specialized resources—nurseries, 
+            laboratories, experimental fields, and fermentation facilities—to 
+            improve cultivation techniques and address emerging challenges in 
+            cocoa production.
+          </p>
+        </div>
+        <div class="luker-column">
+          <img id="lukerImage2" src="image/Pod.JPG" alt="Luker's Challenges" />
+          <h3>Luker's Challenges</h3>
+          <p>
+            Frosty Pod Rot is a fungal disease that can devastate cocoa 
+          production, causing 50–90% crop loss across Central America, South America, 
+          and West Africa. It spreads easily through water, wind, and 
+          pod movement, making containment difficult. The best 
+          prevention is early removal of infected pods, though detection 
+          at early stages remains a challenge.
+          </p>
+          
+        </div>
+        <div class="luker-column">
+          <img id="lukerImage3" src="image/Nursery2.JPG" alt="How We Can Help" />
+          <h3>Sustainability Efforts</h3>
+          <p>
+            Luker Farm is enhancing cocoa yields through its nursery program while testing biocontrol solutions for frosty pod disease. Researchers are evaluating 
+            Trichoderma (already in use) and Daldinia, which is undergoing safety testing to prevent unintended contamination. Integrating these efforts with 
+            advanced technology will improve crop resilience and sustainability.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="farming-community">
+      <h2>Small Farmers</h2>
+
+      <div class="about-the-farmer">
+        <img id="farmImage1" src="image/Fields.JPG" alt="Local Cocoa Farms" />
+        <div class="farm-text">
+          <h3>Local Cocoa Farms</h3>
+          <p>
+            During our trip, we visited a local farm in Belalcázar, where
+            farmers are part of a cocoa farming community with over 120 members.
+            They collaborate to develop new techniques and adopt innovative
+            technologies to enhance harvest yields.
+          </p>
+        </div>
+      </div>
+
+      <div class="about-the-farmer">
+        <div class="farm-text">
+          <h3>Regulating Productivity</h3>
+          <p>
+            Farmers use a university-provided weather station to monitor
+            environmental factors affecting cocoa pods. They also operate
+            fermentation facilities and processing machines for efficient cocoa
+            handling.
+          </p>
+        </div>
+        <img
+          id="farmImage2"
+          src="image/sensor.jpg"
+          alt="Monitoring Productivity"
+        />
+      </div>
+    </section>
+
+    <footer class="footer2" style="color: white; text-align: center">
       <p>&copy; 2024 ColCo. All Rights Reserved.</p>
     </footer>
+    <script>
+      // Image Swap Function
+      function autoSwapImages(imageId, imagesArray, intervalTime) {
+        let index = 0; // Start index
+        setInterval(() => {
+          index = (index + 1) % imagesArray.length; // Loop through images
+          document.getElementById(imageId).src = imagesArray[index]; // Change image
+        }, intervalTime);
+      }
+
+      // Luker Section Images
+      autoSwapImages(
+        "lukerImage1",
+        ["image/Luker.jpg", "image/Cocoa_farm.jpg"],
+        4000
+      );
+      autoSwapImages(
+        "lukerImage2",
+        ["image/Pod.jpg", "image/Open_pod.jpg"],
+        4000
+      );
+      autoSwapImages(
+        "lukerImage3",
+        ["image/Nursery2.jpg", "image/trichoderma.png"],
+        4000
+      );
+
+      // Farming Community Images
+      autoSwapImages(
+        "farmImage1",
+        ["image/Fields.JPG", "image/pond.JPG"],
+        4000
+      );
+      autoSwapImages(
+        "farmImage2",
+        ["image/sensor.jpg", "image/processing_cocoa.jpg"],
+        4000
+      );
+    </script>
   </body>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>  
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
