--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </svg>
             
         <div class="float-text">
-            <h1>Revolutionizing Cocoa Farming With AI</h1>
+            <h1>Cocoa Farming With AI</h1>
             <p>Col Co (Columbian Cocoa) is an innovative project aimed at
                 transforming cocoa farming through advanced technology and empowring farmers.
             </p>
@@ -100,13 +100,13 @@
           <div class="col-lg-4">
             <div class="row no-gutters">
               <div class="col-12 mb-4">
-                <img src="image/bowl_of_cocoa.jpg" alt="Bowl of Cocoa" class="" style="width: 100%">
+                <img src="image/cocoa.jpg" alt="Bowl of Cocoa" class="" style="width: 100%">
               </div>
               <div class="col-6 pr-2">
                 <img src="image/Colombia_cocoa_pod.jpeg" alt="Plants" class="img-fluid mission-img">
               </div>
               <div class="col-6 pl-2">
-                <img src="image/coffee_beans_fertilizer.jpg" alt="Cocoa Pods" class="img-fluid mission-img">
+                <img src="image/pods_husks.jpg" alt="Cocoa Pods" class="img-fluid mission-img">
               </div>
             </div>
           </div>
