--- a/teams.html
+++ b/teams.html
@@ -150,7 +150,7 @@
                 <div class="member-image">
                     <span class="overlay"></span>
                     <div class="card-image">
-                        <img src="image/missing_profile.jpg" alt="???'s profile picture"  />
+                        <img src="image/Andre.jpg" alt="???'s profile picture"  />
                     </div>
                 </div>
                 <h4>Andre Castillo Lee</h4>
@@ -200,7 +200,7 @@
                 <div class="member-image">
                     <span class="overlay"></span>
                     <div class="card-image">
-                        <img src="image/missing_profile.jpg" alt="???'s profile picture"  />
+                        <img src="image/deekshitha.jpg" alt="???'s profile picture"  />
                     </div>
                 </div>
                 <h4>Deekshitha Chavalla</h4>
@@ -360,8 +360,18 @@
                         <img src="image/PhDBio.jpg" alt="???'s profile picture"  />
                     </div>
                 </div>
-                <h4></h4>
+                <h4>Jorge William Arboleda</h4>
                 <p>PhD in Molecular Biology</p>
+            </div>
+            <div class="team-member">
+                <div class="member-image">
+                    <span class="overlay"></span>
+                    <div class="card-image">
+                        <img src="image/missing_profile.jpg" alt="Jhon's profile picture"  />
+                    </div>
+                </div>
+                <h4>Gloria Clemecia Amaya</h4>
+                <p>PhD in Agricultural Sciences</p>
             </div>
         </div>
     </section>
