Updated Data Team page
added images and added new text

--- a/data.html
+++ b/data.html
@@ -60,48 +60,62 @@
   </section>
 
   <section class="about mt-2 p-4">
-    <h2 class="text-center">Overview</h2>
+    <h2 class="text-center" style="line-height: 2;">About our Project</h2>
     <div class="row align-items-center pt-0 pl-4 pr-4">
       <div class="mb-4">
-        <p>
-            Our system integrates environmental sensors, data analysis, and predictive modeling to help cocoa 
-            farmers monitor their crops and reduce disease risks. This innovative approach 
-            supports sustainable farming practices and increases crop yields.
+        <p style="line-height: 2;">
+          We are designing and developing simple weather nodes with sensors to collect temperature, humidity, and 
+          light intensity data. This data will be sent to a browser-based dashboard providing farmers with an 
+          intuitive tool to monitor environmental conditions in real time. Our data will support the machine learning 
+          team to strengthen their models by giving them insight on weather conditions at the time that their images 
+          are taken, in addition to giving farmers an accessible software to automate the data collection and analysis 
+          process.
         </p>
       </div>
     </div>
   </section>
 
-  <section class="how-it-works mb-4 p-4">
-    <h2 class="text-center mb-4">Features</h2>
-    <div class="row align-items-center pt-0 pl-4 pr-4" >
+  <section class="how-it-works mt-2 p-4">
+    <h2 class="text-center mb-4">How It Works</h2>
+    <div class="row align-items-center pt-0 pl-4 pr-4">
       <div class="col-md-4 step">
-          <div class="team-card">
-            <div class="card-body step-info" style="color: black !important; height: auto !important;">
-                <h3 class="card-title">Sensor Network</h3>
-                <p class="card-text">Deploy sensors to track 
-                    temperature, humidity, and soil moisture in real-time.</p>
+          <div class="team-card position-relative">
+          <img src="image/sensor2.png" />
+            <div class="card-body position-absolute step-info">
+                <h3 class="card-title">Step 1</h3>
+                <p class="card-text">Setup the Sensor</p>
             </div>
           </div>
       </div>
       <div class="col-md-4 step">
-          <div class="team-card">
-              <div class="card-body step-info" style="color: black !important; height: auto !important;">
-                  <h3 class="card-title">Predictive Analysis</h3>
-                  <p class="card-text">Analyze data to identify patterns 
-                    and predict potential risks.</p>
+          <div class="team-card position-relative">
+            <img src="image/cloud.jpg" />
+              <div class="card-body position-absolute step-info">
+                  <h3 class="card-title">Step 2</h3>
+                  <p class="card-text">Collect & Upload Data</p>
               </div>
           </div>
       </div>
       <div class="col-md-4 step">
-          <div class="team-card">
-              <div class="card-body step-info" style="color: black !important; height: auto !important;">
-                  <h3 class="card-title">Informative Maps</h3>
-                  <p class="card-text">Visualize data on maps to highlight 
-                    areas needing attention.</p>
+          <div class="team-card position-relative">
+            <img src="image/charts.png" />
+              <div class="card-body position-absolute step-info">
+                  <h3 class="card-title">Step 3</h3>
+                  <p class="card-text">Visualize Results</p>
               </div>
           </div>
       </div>
+    </div>
+  </section>
+
+  <section class="mt-2 p-4"  id="prototype">
+    <h2 class="text-center mb-4">Dashboard Demo</h2>
+    <div class="containerd-flex justify-content-center">
+      <div class="prototype text-center">
+          <img src="image/dashboard.png" alt="Website Prototype">
+          <p>Demo of the ColCo interface</p>
+      </div>
+    </div>
     </div>
   </section>
     <footer class="footer2" style="color: white; text-align: center;">
