--- a/data.html
+++ b/data.html
@@ -35,6 +35,9 @@
                           <a class="nav-link" href="teams.html">Meet the Teams</a>
                       </li>
                       <li class="nav-item">
+                        <a class="nav-link" href="upload.html">Upload Image</a>
+                      </li>
+                      <li class="nav-item">
                           <a class="nav-link contact-btn" href="index.html#contact">Contact Us</a>
                       </li>
                   </ul>
