--- a/upload.html
+++ b/upload.html
@@ -6,20 +6,54 @@
    <link rel="stylesheet" href="css/upload.css">
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
 </head>
+
 <body class ="upload-page">
 
-  <div class="container min-vh-100 d-flex justify-content-center align-items-center">
-    <div class="drag-area" id="drag-area" style="max-width: 400px; width: 100%;">
-          <img src="image/icon.png" alt="Upload icon" id="placeholder-icon">
-          <p id="upload-text">Drag & Drop or Click to Upload an Image</p>
-          <span>Supported: .jpg, .png, .jpeg</span>
-          <div id="spinner"></div>
-          <img id="preview" alt="Image Preview">
-        <input type="file" accept="image/*" id="input-file" hidden>
-        <button id="analyze-btn">Scan for Disease</button>      
+  <h1 class="upload-heading mb-4">Upload Your Image Below!</h1>
+
+   <!-- NEW FORM SECTION  -->
+
+   <div class="form-section container d-flex flex-column align-items-center mb-4">
+    <form id="user-info-form" style="max-width: 500px; width: 100%;">
+      <div class="form-group">
+        <label for="first-name" style="color: white;">First Name</label>
+        <input type="text" class="form-control" id="first-name" placeholder="Enter first name" required>
       </div>
+
+      <div class="form-group">
+        <label for="last-name" style="color: white;">Last Name</label>
+        <input type="text" class="form-control" id="last-name" placeholder="Enter last name" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email" style="color: white;">Email address</label>
+        <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="description" style="color: white;">Description (Optional)</label>
+        <textarea class="form-control" id="description" rows="3" placeholder="Describe your concern..."></textarea>
+      </div>
+    </form>
+   </div>
+
+   <div class="container d-flex flex-column justify-content-center align-items-center">
+
+    <div class="upload-wrapper d-flex flex-column align-items-center">
+
+    <div class="drag-area" id="drag-area" style="max-width: 400px; width: 100%;">
+      <img src="image/icon.png" alt="Upload icon" id="placeholder-icon">
+      <p id="upload-text">Drag & Drop or Click to Upload an Image</p>
+      <span>Supported: .jpg, .png, .jpeg</span>
+      <div id="spinner"></div>
+      <img id="preview" alt="Image Preview">
+      <input type="file" accept="image/*" id="input-file" hidden>   
+    </div>
+
+      <button id="analyze-btn">SUBMIT</button> 
+    </div>
+
   </div>
 
     <script>
