commented out the form on upload page

--- a/upload.html
+++ b/upload.html
@@ -14,7 +14,7 @@
 
    <!-- NEW FORM SECTION  -->
 
-   <div class="form-section container d-flex flex-column align-items-center mb-4">
+   <!-- <div class="form-section container d-flex flex-column align-items-center mb-4">
     <form id="user-info-form" style="max-width: 500px; width: 100%;">
       <div class="form-group">
         <label for="first-name" style="color: white;">First Name</label>
@@ -36,7 +36,7 @@
         <textarea class="form-control" id="description" rows="3" placeholder="Describe your concern..."></textarea>
       </div>
     </form>
-   </div>
+   </div> -->
 
    <div class="container d-flex flex-column justify-content-center align-items-center">
 
