--- a/upload.html
+++ b/upload.html
@@ -38,6 +38,7 @@
     </form>
    </div>
 
+   <!-- UPLOAD SECTION -->
    <div class="container d-flex flex-column justify-content-center align-items-center">
 
     <div class="upload-wrapper d-flex flex-column align-items-center">
